add end point for admin ]
