# src/modules/Comment/Comment.model.js
@@ -1,0 +1,22 @@
+const mongoose = require("mongoose");
+const CommentSchema = new mongoose.Schema({
+
+    body: {
+        type: String
+    },
+    post: {
+        type: mongoose.Types.ObjectId
+
+    },
+    createdBy: {
+        type: mongoose.Types.ObjectId
+    }
+
+}, {
+    timestamps: true
+})
+
+const Comment = mongoose.model('comment', CommentSchema)
+module.exports = {
+    Comment
+}
