# src/modules/Post/post.Routes.js
@@ -1,8 +1,16 @@
 const { CreatePost, getPosts } = require("./post.Controller");
+const authController = require("../User/auth.Controller");
 
 const postRouter = require("express").Router();
-postRouter.post('/', CreatePost)
-postRouter.get('/', getPosts)
+
+postRouter.use(authController.protect);
+
+postRouter.post('/posts', CreatePost)
+
+postRouter.use(authController.restrictTo('ADMIN', 'USER'));
+
+postRouter.get('/posts', getPosts)
+
 module.exports = {
     postRouter
 }
