# src/modules/User/user.Routes.js
@@ -1,7 +1,8 @@
 const userRouter = require("express").Router();
 const authController = require("./auth.Controller");
-userRouter.post("/signup", authController.signup);
-userRouter.post("/login", authController.login);
+userRouter.post("/user/signup", authController.signup);
+userRouter.post("/user/login", authController.login);
+userRouter.post("/admin/statistics", authController.protect, authController.restrictTo('ADMIN'), authController.login);
 module.exports = {
     userRouter
 }
